Wed Nov 03 18:38:03 1999  Gonzalo A. Diethelm  <Gonzalo.Diethelm@jda.cl>

	* tests/testbrdb.prg: 
	The test now restores the color setting and does a CLS before
	exiting.
	
	* tests/testbrw.prg: 
	The test now remembers its device position, cursor setting and
	color and restores everything before exiting.

19991103-07:28 GMT+1 Antonio Linares
   * source/rtl/classes.c
     * hb___msgSuper() simplied, faster and less memory consume.
   * source/rtl/arrays.c
     * bSuperCast is no longer checked.
   * source/vm/hvm.c
     * simpler after super casting process.
   * include/extend.h
     - BASEARRAY struct bSuperCast member removed.
     - BASEARRAY struct uiPrevCls member removed.
   + tests/clasinh.prg
     * New test added proving Super access does not generate unreleased
       memory blocks.

19991102-16:33 GMT+1 Antonio Linares
   * makefile.b32
   * rdd.b32
     * updated files provided by Jose Lalin

19991102-04:05 GMT+1 Antonio Linares
   * makefile.b32
     * some files added. Alphabetical ordered.

19991101-11:53 GMT+3 Alexander Kresin
  * source/pp/hbpp.c
    * Fixed bug

19991101-10:10 GMT+3 Alexander Kresin
  * source/pp/hbpp.c
    * Fixed bug, reported by Antonio Linares

19991030-03:24 GMT+1 Victor Szel <info@szelvesz.hu>
  * tests/rtl_test.prg
    + Four new Pad*() tests added.
  * source/rtl/samples.c
    * Small optimalizations, formatting corrections.
  * source/rtl/dynsym.c
    % hb_strgreater() replaced with standard ANSI C function strcmp(), it's
      now a bit faster.
  * source/rtl/strings.c
    include/extend.h
    ! SUBSTR() bug fix in handling the error when the third parameter was not
      a string. (reported by Andi Jahja)
    - hb_strgreater() removed since it was same as strcmp()

19991028-22:30 EDT David G. Holm <dholm@jsd-llc.com>

   * source/rtl/inkey.c
   * source/rtl/gt/gtdos.c
   * source/rtl/gt/gtwin.c
     + Added Ctrl+Break support for DJGPP.
     % Unified Ctrl+Break handling by modifying DOS (non-DJGPP) and